<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user_vector"
        android:title="Profile" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat_vector"
        android:title="Chat" />

    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover_vector"
        android:title="Discover" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_vector"
        android:title="Search" />

    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_requests_vector"
        android:title="Requests" />

</menu>