<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="500dp"
    android:background="@color/lightPink"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/goBack"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textColor="@color/lightGray"
        android:text="@string/discard_change_caption"
        android:textSize="25px"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_gravity="end"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Biography"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/biographyInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rectangle_border"
        android:hint="Enter Biography"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/biographyAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/design_default_color_error" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="Favourite event categories"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="Click to choose..."
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/categoryAlert"
        android:textColor="@color/design_default_color_error"/>

   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="90dp"
       android:id="@+id/categoryRecyclerView"
       android:orientation="horizontal"
       >


   </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_btn"
            android:gravity="center"
            android:text="Confirm Change"
            android:textSize="14sp"

            />
    </RelativeLayout>



</LinearLayout>